[package]
name = "daoyi-cloud-config"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
figment = { workspace = true }
serde = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
time = { workspace = true }