[package]
name = "daoyi-cloud-db"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
daoyi-cloud-config = { workspace = true }
sea-orm = {workspace = true}