[package]
name = "daoyi-cloud-system"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "./README.md"

[dependencies]
anyhow = { workspace = true }
figment = { workspace = true }
jsonwebtoken = { workspace = true }
rust-embed = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
ulid = { workspace = true }
argon2 = { workspace = true }
cookie = { workspace = true }
dotenvy = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
sea-orm = { workspace = true }
askama = { workspace = true }
rand = { workspace = true }
daoyi-cloud-config = { workspace = true }
daoyi-cloud-db = { workspace = true }
daoyi-cloud-entity = { workspace = true }
daoyi-cloud-models = { workspace = true }
daoyi-cloud-utils = { workspace = true }